examples/type_system/failing/14_unhandled_effect.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/14_unhandled_effect.flx
// error[E413]: Top-Level Effect
//
// Effectful operation is not allowed at top level (requires: Console).
//
//   examples/type_system/failing/14_unhandled_effect.flx:39:1
//    |
// 39 | perform Console.print("hello")
//    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//    | ------------------------------ top-level effectful expression
//
// Hint:
//   Move this code into `fn main() with ... { ... }`.
//
//
// error[E414]: Missing Main Function
//
// Effectful program is missing `fn main` root effect handler.
//
//   examples/type_system/failing/14_unhandled_effect.flx:39:1
//    |
// 39 | perform Console.print("hello")
//    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//    | ------------------------------ effectful top-level execution
//
// Hint:
//   Define `fn main() with ... { ... }` and move execution there.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E413
// expect-error: E414

// Runtime error: no handler for Console
perform Console.print("hello")
